# burn-notice

./: .env.example  .gitignore  CLAUDE.md  Makefile  README.md  SETUP.md
backend/: .dockerignore  Dockerfile  Dockerfile.worker  alembic.ini  pyproject.toml  railway.toml  requirements.txt
backend/management/: backup_db.py  db_shell.py  dev-servers-slim.scpt  dev-servers.scpt  redis_shell.py  reset_db.py  restore_db.py  setup_db.sh  shell.py  sync-ai.py  sync_from_prod.py  utils.py
backend/migrations/: env.py  utils.py
backend/migrations/versions/: 00-custom-gen_nano_id.py  00-system-audit.py  00-system-audit.sql  00-user.py  01-app-audit.sql  01-app_audit.py  2025-12-10-1131-ef3d7794e5b0-initial_tables.py  2025-12-10-1139-a7bc1b588c07-add_todos.py  2025-12-14-1811-dc72e795a482-add_projects_sections_and_tasks_tables.py  2025-12-14-1814-d3da8826f088-add_color_to_project_and_description_to_.py  2025-12-14-1857-645406086fc4-add_parent_task_id_and_is_expanded_to_.py  2025-12-14-1915-2d2ed844b9a3-remove_is_expanded_from_section.py  2025-12-17-1153-7d6b9d212a5f-add_customer_id_to_project.py  2025-12-17-1201-a415a915c5cc-add_project_permission_table.py  2025-12-17-1204-9af58768563c-add_invitation_table.py  2026-02-02-0001-burn_notice_tables.py  2026-02-02-1246-add_user_columns.py  2026-02-02-1248-add_authorization_tables.py  2026-02-02-1249-add_auth_models.py  2026-02-02-1412-add_membership_api_key.py  2026-02-02-1434-add_invitation_table.py  2026-02-02-2119-cf71ca0df2c3-add_telemetryevent_table_for_full_otel_.py  2026-02-02-2217-add_cost_usd_to_usagedaily.py  2026-02-03-2304-1e681908b6c3-add_github_integration_tables.py  2026-02-04-0001-add_github_pr_id_to_commit.py  2026-02-04-1246-e0a6b2132790-add_rolled_up_at_to_usage_table.py
backend/scripts/: backfill_usage_daily.py  seed_data.py
backend/src/: settings.py  setup.py  version.py
backend/src/app/: router.py
backend/src/app/chat/: domains.py  router.py  tasks.py
backend/src/app/engineers/: __init__.py  constants.py  domains.py  models.py  router.py  service.py
backend/src/app/github/: __init__.py  constants.py  domains.py  exceptions.py  models.py  oauth_service.py  router.py  (+1 more)
backend/src/common/: context.py  domain.py  encrypted_field.py  encryption.py  enum.py  exceptions.py  lazy.py  logs.py  middleware.py  model.py  nanoid.py  query.py  reldate.py  request.py  search.py  security_headers.py  super_json.py  utils.py
backend/src/core/: service.py
backend/src/platform/: router.py
backend/tests/: conftest.py
backend/tests/api/: conftest.py
backend/tests/factories/: base.py
backend/tests/unit/: conftest.py
(+306 files in other folders)
