[project]
requires-python = ">=3.11"

[tool.ruff]
target-version = "py311"
line-length = 120


[tool.ruff.lint]
exclude = [
    ".git",
    ".venv",
    ".pytest_cache",
    ".env",
    ".yarn",
    ".ruff_cache",
    "node_modules",
    "dist",
    "backend/migrations",
]
select = [
    "E4",
    "E7",
    "E9",
    "F",
    "I", # Isort imports
]

ignore = [
    "E712",  # Sqlalchemy clauses conflict with this
    "E711",  # Sqlalchemy clauses conflict with this
    "E731",  # Lambdas are cool
    "E402",  # These are nice for file explanations
]

[tool.ruff.lint.isort]
lines-between-types = 0  # No lines between imports

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"


[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.mypy]
python_version = "3.11"
files = ["src/app"]
namespace_packages = true
explicit_package_bases = true

# Strict mode options
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_any_unimported = false
no_implicit_optional = true
check_untyped_defs = true
warn_no_return = true
warn_unreachable = true

# Display options
show_error_codes = true
show_column_numbers = true
pretty = true

# Import discovery
follow_imports = "normal"
ignore_missing_imports = false

# Incremental mode
incremental = true
cache_dir = ".mypy_cache"

# SQLAlchemy plugin
plugins = ["sqlalchemy.ext.mypy.plugin"]

# Per-module options for third-party libraries without stubs
[[tool.mypy.overrides]]
module = [
    "redis.*",
    "walrus.*",
    "boto3.*",
    "slack_sdk.*",
    "msal.*",
    "pyotp.*",
    "qrcode.*",
    "dramatiq.*",
    "apscheduler.*",
    "cron_descriptor.*",
    "slugify.*",
    "bs4.*",
    "openpyxl.*",
    "rapidjson.*",
    "holidays.*",
    "polars.*",
    "pyarrow.*",
    "ddtrace.*",
    "loguru.*",
    "stackprinter.*",
    "sentry_sdk.*",
    "openai.*",
    "anthropic.*",
    "tiktoken.*",
    "sendgrid.*",
    "freezegun.*",
    "faker.*",
    "polyfactory.*",
    "decouple.*",
    "weasyprint.*",
    "PyPDF2.*",
    "pyhumps.*",
    "websockets.*",
    "asgiref.*",
    "asyncio_redis.*",
    "broadcaster.*",
    "argon2.*",
    "PIL.*",
    "uvicorn.*",
    "httpx.*",
    "pytest.*",
    "lxml.*",
    "toml.*",
    "colorama.*"
]
ignore_missing_imports = true

# Allow gradual typing for tests
[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = true
